--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "npm": "^10.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-horizontal-scrolling-menu": "^5.0.0",
+    "react-responsive": "^9.0.2",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.1",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
