--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sagardada",
   "version": "0.1.0",
-  "homepage": "https://sagar-dada.github.io/",
+  "homepage": "https://sagar-dada.github.io/sagardada",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
